--- a/Food-Business-Project/index.html
+++ b/Food-Business-Project/index.html
@@ -27,7 +27,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
 
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
@@ -563,7 +563,7 @@
     /***************************************/ -->
 
     <footer class="footer">
-      <div class="container grid grid--5-cols grid--footer">
+      <div class="container grid grid--5-cols grid-footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
           <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
