--- a/Food-Business-Project/index.html
+++ b/Food-Business-Project/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <!-- Always include this line of code -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Omnifood is an AI-powered food subscriptionthat will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."/>
+
+    <link rel="icon" href="img/favicon.png"/>
+    <link rel="Apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,8 +28,12 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <!-- Safari scrool fix -->
+    <script  defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 
-    <title>Omnifood</title>
+    <script defer src="js/script.js"></script>
+
+    <title>Omnifood &mdash; Never cook again</title>
   </head>
   <body>
     <header class="header">
@@ -35,11 +44,11 @@
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -61,10 +70,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
@@ -80,11 +89,21 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+              <img
               src="img/hero.png"
               class="hero-img"
               alt="Woman enjoying food, meals in storage container and food bowls on a table"
             />
+            </picture>
+            <!-- <img
+              src="img/hero.png"
+              class="hero-img"
+              alt="Woman enjoying food, meals in storage container and food bowls on a table"
+            /> -->
+            
           </div>
         </div>
       </section>
@@ -100,7 +119,7 @@
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -161,7 +180,7 @@
           </div>
         </div>
       </section>
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -278,7 +297,7 @@
       </section>
 
       <!-- TESTIMONIALS -->
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -415,7 +434,7 @@
       </section>
 
       <!-- PRICING SECTION -->
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -521,25 +540,25 @@
           </p></div>
         </div>
       </section>
-      <div class="section-cta">
+      <div class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
           <div class="cta-text-box"><h2 class="heading-secondary">Get your first meal for free!</h2>
             <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!</p>
-            <form class="cta-form" action="#">
+            <form class="cta-form" name="sign-up" netlify>
             
               <div>
               <label for="full-name">Full Name</label>
-              <input id="full-name" type="text" placeholder="John Smith" required/>
+              <input id="full-name" type="text" placeholder="John Smith" name="full-name" required/>
             </div>
             <div>
               <label for="email">Email address</label>
-              <input id="email" type="email" placeholder="me@example.com" required/>
+              <input id="email" type="email" placeholder="me@example.com" name="email" required/>
             </div>
             <div>
 
               <label for="select-where">Where did you hear from us?</label>
-              <select id="select-where" required>
+              <select id="select-where" name="select-where" required>
                 <option value="">Please choose one option:</option>
                 <option value="friends">Friends and family</option>
                 <option value="youtube">Youtube video</option>
@@ -575,7 +594,7 @@
             <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
           </ul>
 
-          <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All right reserved</p>
+          <p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All right reserved</p>
         </div>
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
